Fix: prevent flickering of mobile menu.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -234,3 +234,10 @@
   0% { opacity: 1; }
   100% { opacity: 0; }
 }
+
+
+/* -- Alpine ------------------------------------------------------------------- */
+
+[x-cloak] {
+    display: none !important;
+}
